# qpp-lang

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  features.yaml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml
docs/: 00-overview.md  overview.md  whitepaper.md
docs/architecture/: 01-frontend.md  02-runtime.md  03-hardware-api.md  04-inline-explainability.md  pde_state_evolution.md  quidd.md
docs/examples/: adaptive_task.qpp  bitwise_demo.qpp  demo.qpp  explain_demo.qpp  hello_world.qpp  hints_demo.qpp  mixed_example.qpp  teleport.qpp  wavefunction_demo.qpp
docs/intro/: cpp_foundation.md  why_qpp.md
docs/migration/: asm_vs_qasm.md  bitwise_to_gate.md  bool_logic.md  function_tasks.md  ir_and_probabilities.md  register_mapping.md
include/: hardware_profile.h  logger.h  runtime.h  runtime_config.h
runtime/: device.cpp  device.h  disk_pager.cpp  disk_pager.h  engine.cpp  gpu_kernels.cu  gpu_kernels.h  hardware_api.cpp  hardware_api.h  hardware_profile.cpp  memory.cpp  memory.h  memory_tracker.cpp  memory_tracker.h  partitioner.cpp  partitioner.h  patterns.cpp  patterns.h  quidd.cpp  quidd.h  random.h  runtime_config.cpp  scheduler.cpp  scheduler.h  sparse_wavefunction.cpp  sparse_wavefunction.h  wavefunction.cpp  wavefunction.h
tests/: auto_device_test.sh  checkpoint_test.cpp  compiler_opt_test.sh  demo_integration.sh  device_fallback_test.cpp  disk_paging_test.cpp  engine_dispatch_test.sh  examples_compile_test.sh  fused_gate_test.cpp  hardware_api_test.cpp  hardware_profile_enforcement_test.sh  low_rank_factorization_test.cpp  memory_import_test.cpp  memory_reuse_test.cpp  memory_test.cpp  memory_tracker_test.cpp  memory_usage_test.cpp  optimize_sample.qpp  partitioner_test.cpp  pattern_detection_test.cpp  qregister_serialization_test.cpp  quidd_conversion_test.cpp  random_concurrency_test.cpp  resonance_zone_cache_test.cpp  resource_header_test.sh  rotation_gate_test.cpp  scheduler_pause_test.cpp  scheduler_qpu_dispatch_test.cpp  scheduler_test.cpp  small_profile.json  sparse_wavefunction_test.cpp  wavefunction_collapse_test.cpp  wavefunction_extra_test.cpp  wavefunction_multi_qubit_collapse_test.cpp  wavefunction_periodicity_test.cpp  wavefunction_sparse_test.cpp  wavefunction_test.cpp  wavefunction_twoqubit_measure_test.cpp
tools/: amplitude_heatmap.py  braket_backend.py  cirq_backend.py  nvidia_backend.py  psi_backend.py  qiskit_backend.py  qpp-run.cpp  qppc.cpp  qsharp_backend.py  quidd_benchmark.cpp  spacetime_slicing.py  wave_primes.py
vscode/: language-configuration.json  package.json
vscode/syntaxes/: qpp.tmLanguage.json
